修改代码扫描